--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,15 +4,10 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.5.0
     hooks:
-      - id: check-yaml
-      - id: end-of-file-fixer
-# - repo: https://github.com/pre-commit/pre-commit-hooks
-#     rev: v3.2.0
-#     hooks:
-#     - id: trailing-whitespace
-#     - id: end-of-file-fixer
-#     - id: check-yaml
-#     - id: check-added-large-files
+    - id: check-yaml
+    - id: end-of-file-fixer
+    - id: trailing-whitespace
+    - id: check-added-large-files
 
 # - repo: https://github.com/pycqa/isort
 #     rev: 5.10.1
