--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,12 +8,11 @@ repos:
     - id: end-of-file-fixer
     - id: trailing-whitespace
     - id: check-added-large-files
-
-# - repo: https://github.com/pycqa/isort
-#     rev: 5.10.1
+  # - repo: https://github.com/pycqa/isort
+  #     rev: 5.10.1
+  #     hooks:
+  #     - id: isort
+# -   repo: https://github.com/psf/black
+#     rev: 21.12b0
 #     hooks:
-#     - id: isort
-# - repo: https://github.com/psf/black
-#     rev: v22.10.0
-#     hooks:
-#       - id: black
+#     -   id: black
