--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,10 +8,34 @@ repos:
     - id: end-of-file-fixer
     - id: trailing-whitespace
     - id: check-added-large-files
-  # - repo: https://github.com/pycqa/isort
-  #     rev: 5.10.1
-  #     hooks:
-  #     - id: isort
+  - repo: https://github.com/pycqa/flake8
+    rev: 4.0.1
+    hooks:
+      - id: flake8
+        additional_dependencies:
+          - flake8-bugbear
+          - flake8-comprehensions
+          - flake8-simplify
+# - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+#   rev: v2.1.0
+#   hooks:
+#   - id: pretty-format-yaml
+#     args:
+#     - --autofix
+#     - --preserve-quotes
+#     - --indent=2
+# - repo: https://github.com/igorshubovych/markdownlint-cli
+#   rev: v0.32.2
+#   hooks:
+#   - id: markdownlint
+#     args:
+#     - --fix
+#     verbose: true
+#     entry: bash -c 'markdownlint "$@" || true' --
+#   - repo: https://github.com/pycqa/isort
+#       rev: 5.10.1
+#       hooks:
+#       - id: isort
 # -   repo: https://github.com/psf/black
 #     rev: 21.12b0
 #     hooks:
