--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,11 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+
+default_language_version:
+  python: python3.10
+
+default_stages: [commit, push]
+
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v2.5.0
@@ -8,14 +14,6 @@ repos:
   - id: end-of-file-fixer
   - id: trailing-whitespace
   - id: check-added-large-files
-- repo: https://github.com/pycqa/flake8
-  rev: 4.0.1
-  hooks:
-  - id: flake8
-    additional_dependencies:
-    - flake8-bugbear
-    - flake8-comprehensions
-    - flake8-simplify
 - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
   rev: v2.1.0
   hooks:
@@ -33,7 +31,7 @@ repos:
     verbose: true
     entry: bash -c 'markdownlint "$@" || true' --
 - repo: https://github.com/psf/black
-  rev: 21.12b0
+  rev: 22.3.0
   hooks:
   - id: black
 - repo: https://github.com/pycqa/isort
@@ -47,3 +45,11 @@ repos:
   - id: isort
     name: isort (pyi)
     types: [pyi]
+# - repo: https://github.com/pycqa/flake8
+#   rev: 4.0.1
+#   hooks:
+#   - id: flake8
+#     additional_dependencies:
+#     - flake8-bugbear
+#     - flake8-comprehensions
+#     - flake8-simplify
