--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,6 +34,8 @@ repos:
   rev: 22.3.0
   hooks:
   - id: black
+  args:
+  - -l 120
 - repo: https://github.com/pycqa/isort
   rev: 5.10.1
   hooks:
@@ -45,11 +47,13 @@ repos:
   - id: isort
     name: isort (pyi)
     types: [pyi]
-# - repo: https://github.com/pycqa/flake8
-#   rev: 4.0.1
-#   hooks:
-#   - id: flake8
-#     additional_dependencies:
-#     - flake8-bugbear
-#     - flake8-comprehensions
-#     - flake8-simplify
+- repo: https://github.com/pycqa/flake8
+  rev: 4.0.1
+  hooks:
+  - id: flake8
+    additional_dependencies:
+    - flake8-bugbear
+    - flake8-comprehensions
+    - flake8-simplify
+    verbose: true
+    entry: bash -c 'flake8 "$@" || true' --
