--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,7 +51,7 @@ repos:
   rev: 4.0.1
   hooks:
   - id: flake8
-    args: ['--ignore=E999,W504,W503']
+    args: ['--ignore=E999,W504,W503,E501']
     additional_dependencies:
     - flake8-bugbear
     - flake8-comprehensions
