--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,7 +34,7 @@ repos:
   rev: 22.3.0
   hooks:
   - id: black
-    entry: bash -c 'black "$@" -l 120'
+    entry: bash -c 'black media_mgmt_cli -l 120'
 - repo: https://github.com/pycqa/isort
   rev: 5.10.1
   hooks:
