--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-boto3==1.26.45
-botocore==1.27.16
-certifi==2021.5.30
-click==8.1.3
-jmespath==0.10.0
-python-dateutil==2.8.2
-PyYAML==5.4.1
-s3transfer==0.6.0
-six==1.16.0
-urllib3==1.26.7
+boto3==1.26.54; python_version >= "3.7"
+botocore==1.29.54; python_version >= "3.7"
+certifi==2022.12.7; python_version >= "3.6"
+click==8.1.3; python_version >= "3.7"
+colorama==0.4.6; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.7.0"
+jmespath==1.0.1; python_version >= "3.7"
+python-dateutil==2.8.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
+pyyaml==6.0; python_version >= "3.6"
+s3transfer==0.6.0; python_version >= "3.7"
+six==1.16.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
+urllib3==1.26.14; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
