--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ PyYAML = "^6.0"
 s3transfer = "^0.6.0"
 six = "^1.16.0"
 urllib3 = "^1.26.14"
+pytest = "^7.2.1"
 
 [tool.poetry.dev-dependencies]
 
