--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
-boto3==1.26.54; python_version >= "3.7"
-botocore==1.29.54; python_version >= "3.7"
+attrs==22.2.0; python_version >= "3.7"
+boto3==1.26.55; python_version >= "3.7"
+botocore==1.29.55; python_version >= "3.7"
 certifi==2022.12.7; python_version >= "3.6"
 click==8.1.3; python_version >= "3.7"
-colorama==0.4.6; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.7.0"
+colorama==0.4.6; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" and sys_platform == "win32" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.7.0" and sys_platform == "win32"
+exceptiongroup==1.1.0; python_version < "3.11" and python_version >= "3.7"
+iniconfig==2.0.0; python_version >= "3.7"
 jmespath==1.0.1; python_version >= "3.7"
+packaging==23.0; python_version >= "3.7"
+pluggy==1.0.0; python_version >= "3.7"
+pytest==7.2.1; python_version >= "3.7"
 python-dateutil==2.8.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 pyyaml==6.0; python_version >= "3.6"
 s3transfer==0.6.0; python_version >= "3.7"
 six==1.16.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
+tomli==2.0.1; python_version < "3.11" and python_version >= "3.7"
 urllib3==1.26.14; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
