--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,29 +32,63 @@ jobs:
     - name: Run tests
       run: |
         pytest
-  deploy:
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: [test]
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #   - name: Set up Python
+  #     uses: actions/setup-python@v4
+  #     with:
+  #       python-version: "3.10"
+  #   - uses: actions/cache@v3
+  #     name: Configure pip caching
+  #     with:
+  #       path: ~/.cache/pip
+  #       key: ${{ runner.os }}-publish-pip-${{ hashFiles('**/setup.py') }}
+  #       restore-keys: |
+  #         ${{ runner.os }}-publish-pip-
+  #   - name: Install dependencies
+  #     run: |
+  #       pip install setuptools wheel twine build
+  #   - name: Publish
+  #     env:
+  #       TWINE_USERNAME: __token__
+  #       TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+  #     run: |
+  #       python -m build
+  #       twine upload dist/*
+  # jobs:
+  build-n-publish:
+    name: Build and publish Python 🐍 distributions 📦 to PyPI and TestPyPI
     runs-on: ubuntu-latest
-    needs: [test]
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - uses: actions/checkout@master
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    - uses: actions/cache@v3
-      name: Configure pip caching
+    - name: Install pypa/build
+      run: >-
+        python -m
+        pip install
+        build
+        --user
+    - name: Build a binary wheel and a source tarball
+      run: >-
+        python -m
+        build
+        --sdist
+        --wheel
+        --outdir dist/
+        .
+    # - name: Publish distribution 📦 to Test PyPI
+    #   uses: pypa/gh-action-pypi-publish@release/v1
+    #   with:
+    #     password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+    #     repository_url: https://test.pypi.org/legacy/
+    - name: Publish distribution 📦 to PyPI
+      # if: startsWith(github.ref, 'refs/tags')
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-publish-pip-${{ hashFiles('**/setup.py') }}
-        restore-keys: |
-          ${{ runner.os }}-publish-pip-
-    - name: Install dependencies
-      run: |
-        pip install setuptools wheel twine build
-    - name: Publish
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-      run: |
-        python -m build
-        twine upload dist/*
+        password: ${{ secrets.PYPI_TOKEN }}
