--- a/.github/workflows/codeball.yml
+++ b/.github/workflows/codeball.yml
@@ -1,8 +1,9 @@
 name: Codeball
+
 on: [pull_request]
 
 jobs:
-  codeball_job:
+  codeball-job:
     runs-on: ubuntu-latest
     name: Codeball
     steps:
