--- a/.github/workflows/pre-publish.yml
+++ b/.github/workflows/pre-publish.yml
@@ -17,7 +17,7 @@ permissions:
   contents: read
 
 jobs:
-  test:
+  test-py-os:
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
