--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,8 +30,6 @@ repos:
     - --fix
     verbose: true
     entry: bash -c 'markdownlint "$@" || true' --
-
-# python specific hooks
 - repo: https://github.com/psf/black
   rev: 22.3.0
   hooks:
@@ -39,7 +37,7 @@ repos:
     args:
     - "-l 120"
 - repo: https://github.com/pycqa/isort
-  rev: 5.10.1
+  rev: 5.12.0
   hooks:
   - id: isort
     args: ['--order-by-type', '--length-sort', "--profile", "black", "--filter-files"]
@@ -61,3 +59,16 @@ repos:
     - flake8-simplify
     verbose: true
     entry: bash -c 'flake8 "$@" || true' --
+
+# - repo: https://github.com/pycqa/isort
+#   rev: 5.11.2
+#   hooks:
+#   - id: isort
+#     args: ['--order-by-type', '--length-sort', "--profile", "black", "--filter-files"]
+#     name: isort (python)
+#   - id: isort
+#     name: isort (cython)
+#     types: [cython]
+#   - id: isort
+#     name: isort (pyi)
+#     types: [pyi]
