--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 # Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
 [tool.poetry]
 name = "mmgmt"
-version = "0.4.2"
+version = "0.5.0"
 description = ""
 readme = "README.md"
 authors = ["Will Wright <willwright@example.com>"]
@@ -9,11 +9,8 @@ license = "GNU GPL v3.0"
 repository = "https://github.com/will-wright-eng/media-mgmt-cli"
 homepage = "https://github.com/will-wright-eng/media-mgmt-cli"
 
-# Keywords description https://python-poetry.org/docs/pyproject/#keywords
-keywords = []  #! Update me
-
 # Pypi classifiers: https://pypi.org/classifiers/
-classifiers = [  #! Update me
+classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Developers",
   "Operating System :: OS Independent",
@@ -39,23 +36,22 @@ s3transfer = "^0.6.0"
 six = "^1.16.0"
 urllib3 = "^1.26.14"
 pytest = "^7.2.1"
-
-[tool.poetry.dev-dependencies]
+isort = "^5.12.0"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core=1.3.2"]
 build-backend = "poetry.core.masonry.api"
 
 # Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
 [tool.poetry.scripts]
-"mmgmt" = "mmgmt.cli:cli"
+"mmgmt" = "mmgmt:cli"
 
 # https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
 [tool.mypy]
 pretty = true
 show_traceback = true
 color_output = true
-ignore_missing_imports = true
+ignore_m1sing_imports = true
 allow_redefinition = true
 
 [tool.pytest.ini_options]
@@ -63,3 +59,6 @@ allow_redefinition = true
 # Directories that are not visited by pytest collector:
 norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
 doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
+
+[tool.isort]
+profile="black"
