--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ pytest = "^7.2.1"
 isort = "^5.12.0"
 
 [build-system]
-requires = ["poetry-core=1.3.2"]
+requires = ["poetry-core>=1.3.2"]
 build-backend = "poetry.core.masonry.api"
 
 # Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
