--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,11 +12,12 @@ permissions:
   contents: read
 
 jobs:
-  test-py:
-    runs-on: ubuntu-latest
+  test-py-os:
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
+        os: [ubuntu-20.04, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
@@ -36,3 +37,29 @@ jobs:
     - name: Run tests
       run: |
         pytest
+
+# jobs:
+#   test-py:
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         python-version: ["3.8", "3.9", "3.10", "3.11"]
+#     steps:
+#     - uses: actions/checkout@v3
+#     - name: Set up Python ${{ matrix.python-version }}
+#       uses: actions/setup-python@v4
+#       with:
+#         python-version: ${{ matrix.python-version }}
+#     - uses: actions/cache@v3
+#       name: Configure pip caching
+#       with:
+#         path: ~/.cache/pip
+#         key: ${{ runner.os }}-pip-${{ hashFiles('**/setup.py') }}
+#         restore-keys: |
+#           ${{ runner.os }}-pip-
+#     - name: Install dependencies
+#       run: |
+#         pip install -e .
+#     - name: Run tests
+#       run: |
+#         pytest
