--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,11 +31,13 @@ certifi = "^2022.12.7"
 click = "^8.1.3"
 jmespath = "^1.0.1"
 python-dateutil = "^2.8.2"
-PyYAML = "^6.0"
 s3transfer = "^0.6.0"
 six = "^1.16.0"
 urllib3 = "^1.26.14"
 pytest = "^7.2.1"
+typer = "^0.9.0"
+rich = "^13.3.5"
+python-dotenv = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.3.2"]
