--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -e .
+        pip install pytest-mock
     - name: Run tests
       run: |
         pytest
