--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,16 @@ six = "^1.16.0"
 urllib3 = "^1.26.14"
 pytest = "^7.2.1"
 
+[tool.poetry.optional-dependencies]
+test = [
+    "pytest >= 7.2.2, < 8.0.0",
+    "requests-mock[fixture] >= 1.10.0, < 2.0.0",
+    "isort >= 5.12.0, < 6.0.0",
+    "black == 23.1.0",
+    "types-requests == 2.28.11.17",
+    "codespell  >= 2.2.5, < 3.0.0"
+]
+
 [build-system]
 requires = ["poetry-core>=1.3.2"]
 build-backend = "poetry.core.masonry.api"
@@ -58,3 +68,7 @@ allow_redefinition = true
 # Directories that are not visited by pytest collector:
 norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
 doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
+
+[tool.codespell]
+skip = '.git,venv'
+# ignore-words-list = ''
