--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 # Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
 [tool.poetry]
 name = "mgmt"
-version = "0.7.0"
+version = "0.7.2"
 description = ""
 readme = "README.md"
 authors = ["Will Wright <willwright@example.com>"]
@@ -39,6 +39,7 @@ typer = "^0.9.0"
 rich = "^13.3.5"
 python-dotenv = "^1.0.0"
 rarfile = "^4.0"
+toml = "^0.10.2"
 
 [package.optional-dependencies]
 test = [
