--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,78 +1,102 @@
-# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
-[tool.poetry]
+[project]
 name = "mgmt"
-version = "0.7.6"
-description = ""
+version = "0.8.0"
+description = "An intuitive command line interface that wraps boto3 to search and manage media assets"
 readme = "README.md"
-authors = ["Will Wright <willwright@example.com>"]
-license = "GNU GPL v3.0"
-repository = "https://github.com/will-wright-eng/media-mgmt-cli"
-homepage = "https://github.com/will-wright-eng/media-mgmt-cli"
-
-# Pypi classifiers: https://pypi.org/classifiers/
+authors = [
+    {name = "Will Wright", email = "willwright@example.com"}
+]
+license = {text = "GNU GPL v3.0"}
 classifiers = [
-  "Development Status :: 3 - Alpha",
-  "Intended Audience :: Developers",
-  "Operating System :: OS Independent",
-  "Topic :: Software Development :: Libraries :: Python Modules",
-  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
-  "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.8",
-  "Programming Language :: Python :: 3.9",
-  "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "Operating System :: OS Independent",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
+requires-python = ">=3.8"
+dependencies = [
+    "boto3>=1.26.54",
+    "botocore>=1.29.54",
+    "certifi>=2022.12.7,<2024.0.0",
+    "click>=8.1.3",
+    "jmespath>=1.0.1",
+    "python-dateutil>=2.8.2",
+    "s3transfer>=0.6.0",
+    "six>=1.16.0",
+    "urllib3>=1.26.14",
+    "typer>=0.9.0",
+    "rich>=13.3.5",
+    "python-dotenv>=1.0.0",
+    "rarfile>=4.0",
+    "toml>=0.10.2",
 ]
 
-[tool.poetry.dependencies]
-python = "^3.8"
-boto3 = "^1.26.54"
-botocore = "^1.29.54"
-certifi = ">=2022.12.7,<2024.0.0"
-click = "^8.1.3"
-jmespath = "^1.0.1"
-python-dateutil = "^2.8.2"
-s3transfer = "^0.6.0"
-six = "^1.16.0"
-urllib3 = "^1.26.14"
-pytest = "^7.2.1"
-typer = "^0.9.0"
-rich = "^13.3.5"
-python-dotenv = "^1.0.0"
-rarfile = "^4.0"
-toml = "^0.10.2"
-
-[package.optional-dependencies]
+[project.optional-dependencies]
 test = [
-    "pytest >= 7.2.2, < 8.0.0",
-    "requests-mock[fixture] >= 1.10.0, < 2.0.0",
-    "isort >= 5.12.0, < 6.0.0",
-    "black == 23.1.0",
-    "types-requests == 2.28.11.17",
-    "codespell  >= 2.2.5, < 3.0.0"
+    "pytest>=7.2.2,<8.0.0",
+    "pytest-mock>=3.10.0",
+    "requests-mock[fixture]>=1.10.0,<2.0.0",
+    "types-requests==2.28.11.17",
+    "codespell>=2.2.5,<3.0.0",
 ]
+dev = [
+    "ruff>=0.1.0",
+    "pre-commit>=3.0.0",
+]
+
+[project.scripts]
+mgmt = "mgmt:cli"
+
+[project.urls]
+Homepage = "https://github.com/will-wright-eng/media-mgmt-cli"
+Repository = "https://github.com/will-wright-eng/media-mgmt-cli"
 
 [build-system]
-requires = ["poetry-core>=1.3.2"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
-[tool.poetry.scripts]
-"mgmt" = "mgmt:cli"
-
-# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
 [tool.mypy]
 pretty = true
 show_traceback = true
 color_output = true
-ignore_m1sing_imports = true
+ignore_missing_imports = true
 allow_redefinition = true
 
 [tool.pytest.ini_options]
-# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
-# Directories that are not visited by pytest collector:
-norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
+norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
 doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
 
 [tool.codespell]
 skip = '.git,venv'
-# ignore-words-list = ''
+
+[tool.ruff]
+target-version = "py38"
+line-length = 88
+
+[tool.ruff.lint]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "UP", # pyupgrade
+]
+ignore = [
+    "E501",  # line too long, handled by formatter
+    "B008",  # do not perform function calls in argument defaults
+    "C901",  # too complex
+]
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["mgmt"]
