--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,7 @@
 version: 2
 
 updates:
-- package-ecosystem: "pip"
+- package-ecosystem: "uv"
   directory: "/"
   schedule:
     interval: "weekly"
@@ -16,16 +16,6 @@ updates:
 
 - package-ecosystem: "github-actions"
   directory: "/"
-  schedule:
-    interval: "weekly"
-  allow:
-  - dependency-type: "all"
-  commit-message:
-    prefix: ":arrow_up:"
-  open-pull-requests-limit: 2
-
-- package-ecosystem: "docker"
-  directory: "/docker"
   schedule:
     interval: "weekly"
   allow:
