--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ test = [
 ]
 dev = [
     "ruff>=0.1.0",
-    "pre-commit>=3.0.0",
+    "mypy>=1.7.0",
 ]
 
 [project.scripts]
@@ -62,11 +62,38 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.mypy]
+python_version = "3.8"
+# Basic type checking - not too strict
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = false
+disallow_incomplete_defs = false
+check_untyped_defs = true
+disallow_untyped_decorators = false
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+strict_equality = false
 pretty = true
 show_traceback = true
 color_output = true
 ignore_missing_imports = true
-allow_redefinition = true
+allow_redefinition = false
+
+# Per-module options
+[[tool.mypy.overrides]]
+module = [
+    "boto3.*",
+    "botocore.*",
+    "rarfile.*",
+    "toml.*",
+    "typer.*",
+    "rich.*",
+    "dotenv.*",
+]
+ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
@@ -100,3 +127,8 @@ ignore = [
 
 [tool.ruff.lint.isort]
 known-first-party = ["mgmt"]
+
+[tool.uv]
+dev-dependencies = [
+    "mypy>=1.14.1",
+]
