--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,6 +33,12 @@ repos:
 
   - repo: local
     hooks:
+      - id: uv-lock
+        name: uv lock
+        entry: uv lock --check
+        language: system
+        files: ^(pyproject\.toml|uv\.lock)$
+        pass_filenames: false
       - id: ty
         name: ty
         entry: uv run ty check
